# Cosmos

./: main.py  pyproject.toml
env/Scripts/: activate  activate.bat
