[tool.poetry]
name = "repl_python3_Cosmos"
version = "0.1.0"
description = ""
authors = ["404Apollo1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
lxml = "^4.6.3"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
